RoomDetail Fix