@@ -6,6 +6,7 @@ import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.*;
 import model.RoomType;
 import model.RoomImage;
+import model.Amenity;
 
 import java.io.IOException;
 import java.sql.SQLException;
@@ -13,7 +14,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import model.Amenity;
 
 @WebServlet(name = "ManageRoomType", urlPatterns = {"/ManageRoomType"})
 public class ManageRoomType extends HttpServlet {
@@ -23,98 +23,52 @@ public class ManageRoomType extends HttpServlet {
     @Override
     public void init() {
         roomTypeDAO = new RoomTypeDAO();
-
     }
 
     @Override
-    protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-        String idParam = request.getParameter("id");
-        if (idParam != null && !idParam.isEmpty()) {
-            try {
+    protected void doGet(HttpServletRequest request, HttpServletResponse response)
+            throws ServletException, IOException {
+        try {
+            String idParam = request.getParameter("id");
+            RoomType roomType = new RoomType(); // Tránh null
+
+            if (idParam != null && !idParam.isBlank()) {
                 int id = Integer.parseInt(idParam);
-                RoomType roomType = roomTypeDAO.getRoomTypeById(id);
+                roomType = roomTypeDAO.getRoomTypeById(id);
+
                 if (roomType != null) {
-                    request.setAttribute("roomType", roomType);
+                    roomType.setAmenities(roomTypeDAO.getAmenitiesByRoomTypeId(id));
+                    roomType.setCategoryList(roomTypeDAO.getCategoriesByRoomTypeId(id));
+                    roomType.setImages(roomTypeDAO.getImagesByRoomTypeId(id)); // ✅ Load ảnh chi tiết
                 } else {
-                    request.setAttribute("error", "Không tìm thấy loại phòng!");
+                    roomType = new RoomType(); // fallback
                 }
-            } catch (NumberFormatException | SQLException ex) {
-                Logger.getLogger(ManageRoomType.class.getName()).log(Level.SEVERE, null, ex);
-                request.setAttribute("error", "Lỗi khi lấy thông tin loại phòng!");
             }
+
+            request.setAttribute("roomType", roomType);
+            request.getRequestDispatcher("Manager/manager.jsp?page=managerRoomType.jsp").forward(request, response);
+
+        } catch (Exception e) {
+            e.printStackTrace();
+            response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
+            response.setContentType("text/plain;charset=UTF-8");
+            response.getWriter().write("Lỗi khi tải thông tin loại phòng: " + e.getMessage());
         }
-        request.getRequestDispatcher("Manager/manager.jsp?page=managerRoomType.jsp").forward(request, response);
     }
 
     @Override
-    protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+    protected void doPost(HttpServletRequest request, HttpServletResponse response)
+            throws ServletException, IOException {
         request.setCharacterEncoding("UTF-8");
-        response.setContentType("text/plain; charset=UTF-8");
-
-        // 1. Xử lý thêm/xóa tiện ích
-        String amenityAction = request.getParameter("amenityAction");
-        if ("add".equals(amenityAction)) {
-            String amenityName = request.getParameter("amenityName");
-            String icon = request.getParameter("icon");
-            String roomTypeIdRaw = request.getParameter("roomTypeID");
-
-            if (amenityName == null || icon == null || roomTypeIdRaw == null
-                    || amenityName.trim().isEmpty() || icon.trim().isEmpty() || roomTypeIdRaw.trim().isEmpty()) {
-                response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
-                response.getWriter().write("Thiếu dữ liệu tiện ích!");
-                return;
-            }
-
-            try {
-                int roomTypeId = Integer.parseInt(roomTypeIdRaw.trim());
-                Amenity amenity = new Amenity();
-                amenity.setAmenityName(amenityName.trim());
-                amenity.setIcon(icon.trim());
-                RoomType rt = new RoomType();
-                rt.setRoomTypeID(roomTypeId);
-                amenity.setRoomType(rt);
-
-                roomTypeDAO.insertAmenity(amenity);
-                response.setStatus(HttpServletResponse.SC_OK);
-                response.getWriter().write("Đã thêm tiện ích");
-            } catch (NumberFormatException | SQLException ex) {
-                Logger.getLogger(ManageRoomType.class.getName()).log(Level.SEVERE, null, ex);
-                response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
-                response.getWriter().write("Lỗi khi thêm tiện ích");
-            }
-            return;
-        }
-
-        if ("delete".equals(amenityAction)) {
-            String amenityIdRaw = request.getParameter("amenityId");
-            if (amenityIdRaw == null || amenityIdRaw.trim().isEmpty()) {
-                response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
-                response.getWriter().write("Thiếu ID tiện ích!");
-                return;
-            }
-
-            try {
-                int amenityId = Integer.parseInt(amenityIdRaw);
-                roomTypeDAO.deleteAmenityById(amenityId);
-                response.setStatus(HttpServletResponse.SC_OK);
-                response.getWriter().write("Đã xóa tiện ích");
-            } catch (NumberFormatException | SQLException ex) {
-                Logger.getLogger(ManageRoomType.class.getName()).log(Level.SEVERE, null, ex);
-                response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
-                response.getWriter().write("Lỗi khi xóa tiện ích");
-            }
-            return;
-        }
-
-        // 2. Xử lý xóa ảnh
+        String maxGuestsRaw = request.getParameter("maxGuests");
         String deleteImageIdRaw = request.getParameter("deleteImageId");
-        if (deleteImageIdRaw != null && !deleteImageIdRaw.trim().isEmpty()) {
+        if (deleteImageIdRaw != null) {
             try {
                 int imageId = Integer.parseInt(deleteImageIdRaw);
                 roomTypeDAO.deleteImageById(imageId);
                 response.setStatus(HttpServletResponse.SC_OK);
                 response.getWriter().write("Xóa ảnh thành công");
-            } catch (NumberFormatException | SQLException ex) {
+            } catch (SQLException ex) {
                 Logger.getLogger(ManageRoomType.class.getName()).log(Level.SEVERE, null, ex);
                 response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
                 response.getWriter().write("Lỗi khi xóa ảnh");
@@ -122,76 +76,130 @@ public class ManageRoomType extends HttpServlet {
             return;
         }
 
-        // 3. Xử lý form loại phòng
         String idRaw = request.getParameter("roomTypeID");
         String name = request.getParameter("name");
         String description = request.getParameter("description");
-        String basePriceRaw = request.getParameter("basePrice");
+        double basePrice = Double.parseDouble(request.getParameter("basePrice"));
         String imageUrl = request.getParameter("imageUrl");
         String roomDetail = request.getParameter("roomDetail");
-        String maxGuestsRaw = request.getParameter("maxGuests");
+        String categorySync = request.getParameter("categorySync");
 
-        // Validation
-        if (name == null || name.trim().isEmpty() || basePriceRaw == null || basePriceRaw.trim().isEmpty()) {
-            response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
-            response.getWriter().write("Tên loại phòng và giá cơ bản là bắt buộc!");
-            return;
-        }
+        RoomType type = new RoomType();
+        type.setName(name);
+        type.setDescription(description);
+        type.setBasePrice(basePrice);
+        type.setRoomDetail(roomDetail);
+        type.setImageUrl(imageUrl != null ? imageUrl.trim() : "");
 
-        double basePrice;
-        int maxGuests;
+// Thêm đoạn này:
+        int maxGuests = 0;
         try {
-            basePrice = Double.parseDouble(basePriceRaw.trim());
-            maxGuests = maxGuestsRaw != null && !maxGuestsRaw.trim().isEmpty() ? Integer.parseInt(maxGuestsRaw.trim()) : 0;
+            if (maxGuestsRaw != null && !maxGuestsRaw.isBlank()) {
+                maxGuests = Integer.parseInt(maxGuestsRaw.trim());
+            }
         } catch (NumberFormatException e) {
-            response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
-            response.getWriter().write("Giá cơ bản hoặc số khách tối đa không hợp lệ!");
-            return;
+            maxGuests = 0;
         }
-
-        // Xử lý danh sách ảnh chi tiết
-        List<RoomImage> images = new ArrayList<>();
+        type.setMaxGuests(maxGuests);
+        // Ảnh chi tiết
         String[] imageUrls = request.getParameterValues("imageUrls[]");
-        String[] categories = request.getParameterValues("categories[]");
-        if (imageUrls != null && categories != null && imageUrls.length == categories.length) {
+        List<RoomImage> images = new ArrayList<>();
+        if (imageUrls != null) {
             for (int i = 0; i < imageUrls.length; i++) {
-                if (imageUrls[i] != null && !imageUrls[i].trim().isEmpty()) {
+                String url = imageUrls[i];
+                if (url != null && !url.trim().isEmpty()) {
                     RoomImage img = new RoomImage();
-                    img.setImageUrl(imageUrls[i].trim());
-                    img.setPrimary(false); // Chỉ ảnh đại diện là primary
-                    img.setCategory(categories[i] != null ? categories[i].trim() : "Default");
+                    img.setImageUrl(url.trim());
+
+                    List<String> catList = new ArrayList<>();
+                    String[] cats = request.getParameterValues("imageCategories" + i);
+                    if (cats != null) {
+                        for (String c : cats) {
+                            if (!c.trim().isEmpty()) {
+                                catList.add(c.trim());
+                            }
+                        }
+                    }
+                    img.setCategories(catList);
                     images.add(img);
                 }
             }
         }
-
-        RoomType type = new RoomType();
-        type.setName(name.trim());
-        type.setDescription(description != null ? description.trim() : "");
-        type.setBasePrice(basePrice);
-        type.setRoomDetail(roomDetail != null ? roomDetail.trim() : "");
-        type.setImageUrl(imageUrl != null ? imageUrl.trim() : "");
-        type.setMaxGuests(maxGuests);
         type.setImages(images);
 
-        try {
-            if (idRaw == null || idRaw.trim().isEmpty()) {
-                roomTypeDAO.insertRoomType(type);
-            } else {
-                int id = Integer.parseInt(idRaw);
-                type.setRoomTypeID(id);
-                roomTypeDAO.updateRoomType(type);
+        // Tiện ích
+        List<Amenity> amenities = new ArrayList<>();
+        String[] amenityNames = request.getParameterValues("amenityNames[]");
+        String[] amenityIcons = request.getParameterValues("amenityIcons[]");
+        if (amenityNames != null && amenityIcons != null) {
+            for (int i = 0; i < amenityNames.length; i++) {
+                if (!amenityNames[i].isBlank()) {
+                    Amenity a = new Amenity();
+                    a.setAmenityName(amenityNames[i]);
+                    a.setIcon(amenityIcons[i]);
+                    a.setRoomType(type);
+                    amenities.add(a);
+                }
             }
-            response.sendRedirect("RoomTypeListServlet");
-        } catch (NumberFormatException | SQLException ex) {
-            Logger.getLogger(ManageRoomType.class.getName()).log(Level.SEVERE, null, ex);
-            response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
-            response.getWriter().write("Lỗi khi lưu loại phòng");
         }
+        type.setAmenities(amenities);
+
+        // Danh mục
+        List<String> categoryList = new ArrayList<>();
+        String[] categories = request.getParameterValues("categoryList[]");
+        if (categories != null) {
+            for (String cat : categories) {
+                if (!cat.isBlank()) {
+                    categoryList.add(cat.trim());
+                }
+            }
+        }
+        if (categoryList.isEmpty() && categorySync != null && !categorySync.isEmpty()) {
+            categoryList.addAll(List.of(categorySync.split(",")));
+        }
+        type.setCategoryList(categoryList);
+
+        try {
+            int roomTypeId;
+
+            if (idRaw == null || idRaw.isEmpty()) {
+                roomTypeId = roomTypeDAO.insertRoomType(type); // ✅ Trả về RoomTypeID mới
+                type.setRoomTypeID(roomTypeId);
+            } else {
+                roomTypeId = Integer.parseInt(idRaw);
+                type.setRoomTypeID(roomTypeId);
+            }
+
+            // ➤ Thêm danh mục trước
+            List<String> currentCategories = roomTypeDAO.getCategoriesByRoomTypeId(roomTypeId);
+            for (String cat : categoryList) {
+                if (!currentCategories.contains(cat)) {
+                    roomTypeDAO.addCategoryToRoomType(roomTypeId, cat);
+                    Logger.getLogger(ManageRoomType.class.getName()).info("Added category: " + cat);
+                }
+            }
+            for (String cat : currentCategories) {
+                if (!categoryList.contains(cat)) {
+                    roomTypeDAO.deleteCategoryFromRoomType(roomTypeId, cat);
+                    Logger.getLogger(ManageRoomType.class.getName()).info("Removed category: " + cat);
+                }
+            }
+
+            // ➤ Sau đó update RoomType để thêm ảnh, tiện ích
+            roomTypeDAO.updateRoomType(type);
+
+        } catch (SQLException ex) {
+            Logger.getLogger(ManageRoomType.class.getName()).log(Level.SEVERE, "Lỗi khi lưu loại phòng: ", ex);
+            response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
+            response.getWriter().write("Lỗi khi lưu thông tin: " + ex.getMessage());
+            return;
+        }
+
+        response.sendRedirect("RoomTypeListServlet");
     }
 
     @Override
     public String getServletInfo() {
-        return "Manage room types (add/edit/delete images)";
+        return "Manage room types (add/edit/delete images, amenities, categories)";
     }
 }
